--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
