Added rabbot page

--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -3,6 +3,7 @@
     "key": 1,
     "name": "RABBOT",
     "memo": "Thesis project",
+    "link": "/rabbot",
     "date": "2019 April",
     "tags": "MR Wearables Software",
     "mainPhoto": "pics/projects/RABBOT/RABBOT.jpg"
