Added rabbot and project info

--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -4,7 +4,10 @@
     "name": "RABBOT",
     "memo": "Thesis project",
     "link": "/rabbot",
-    "date": "2019 April",
+    "date": "2019",
+    "type": "VR/AR Apps",
+    "tools": "VR/AR Apps",
+    "role": "Design & Development",
     "tags": "MR Wearables Software",
     "mainPhoto": "pics/projects/RABBOT/RABBOT.jpg"
   },
