--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -43,7 +43,7 @@
     "date": "2018 April",
     "type": "Game",
     "tools": "Illustrator, Photoshop",
-    "role": "Design",
+    "role": "Character Design & Animation",
     "tags": "Animation",
     "mainPhoto": "pics/projects/MaidenPink/MaidenPink_L.jpg"
   },
