--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -19,7 +19,7 @@
     "date": "2021",
     "type": "Wiki Platform",
     "tools": "ReactJS, Bootstrap, AWS",
-    "role": "Front-end Development",
+    "role": "Development",
     "tags": "Software",
     "mainPhoto": "pics/projects/VPIA/VPIA.jpg"
   },
