--- a/.github/workflows/master_yiyishao.yml
+++ b/.github/workflows/master_yiyishao.yml
@@ -23,11 +23,10 @@ jobs:
       with:
         node-version: '14.x'
 
-    - name: npm install, build, and test
+    - name: npm install, build
       run: |
         npm install
         npm run build --if-present
-        npm run test --if-present
 
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
