--- a/.github/workflows/master_yiyishao.yml
+++ b/.github/workflows/master_yiyishao.yml
@@ -27,7 +27,9 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-
+    - name: add process.json
+      run: |
+        echo '{ script: "serve", env: { PM2_SERVE_SPA: "true", PM2_SERVE_HOMEPAGE: "/index.html" } }' >> build/process.json
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
       with:
