--- a/.github/workflows/master_yiyishao.yml
+++ b/.github/workflows/master_yiyishao.yml
@@ -1,12 +1,16 @@
 # Docs for the Azure Web Apps Deploy action: https://go.microsoft.com/fwlink/?linkid=2134798
 # More GitHub Actions for Azure: https://go.microsoft.com/fwlink/?linkid=2135048
 
-name: Azure App Service - YiyiShao(Production), Build and deploy NodeJS app
 
 on:
   push:
     branches:
       - master
+      
+env:
+  AZURE_WEBAPP_NAME: YiyiShao # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: 'build'  # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '12.x'                # set this to the node version to use
 
 jobs:
   build-and-deploy:
@@ -21,7 +25,7 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '14.x'
+        node-version: ${{ env.NODE_VERSION }}
 
     - name: npm install, build
       run: |
@@ -33,8 +37,8 @@ jobs:
     - name: Run Azure webapp deploy action using publish profile credentials
       uses: azure/webapps-deploy@v2
       with:
-        app-name: YiyiShao
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
         slot-name: Production
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1A35A4A182224291B3D3A4BE2FCCAB30 }}
-        package: .
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
