--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@testing-library/user-event": "^12.1.10",
     "framer-motion": "^4.1.2",
     "isotope-layout": "^3.0.6",
+    "lottie-react": "^2.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-lottie": "^1.2.3",
-    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "^5.0.0",
+    "react-tsparticles": "^2.9.3",
+    "run-parallel": "^1.2.0",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.20.7"
   }
 }
