--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^5.0.0",
     "react-tsparticles": "^2.9.3",
     "run-parallel": "^1.2.0",
+    "tsparticles": "^2.9.3",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
