--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.2.3",
     "framer-motion": "^4.1.2",
     "isotope-layout": "^3.0.6",
     "lottie-react": "^2.4.0",
