Adding new projects

--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -1,27 +1,27 @@
 [
   {
     "key": 1,
-    "name": "RABBOT",
-    "memo": "Thesis project",
-    "link": "/rabbot",
-    "date": "2019",
-    "type": "VR/AR Apps",
-    "tools": "Unity, Blender3D",
-    "role": "Design & Development",
-    "tags": "MR Wearables Software",
-    "mainPhoto": "pics/projects/RABBOT/RABBOT.jpg"
+    "name": "Universe Concert",
+    "link": "/UniverseConcert",
+    "memo": "Plymouth University, Plymouth",
+    "date": "2015",
+    "type": "AR Theater",
+    "tools": "Unity",
+    "role": "Design",
+    "tags": "MR",
+    "mainPhoto": "pics/projects/UniverseConcert/UniverseConcert.JPG"
   },
   {
     "key": 2,
-    "name": "Virtual Platform For Indigenous Art",
-    "memo": "Wapatah Centre, Toronto",
-    "link": "/vpia",
-    "date": "2021",
-    "type": "Wiki Platform",
-    "tools": "ReactJS, Bootstrap, AWS",
+    "name": "DiveIntoDigital",
+    "link": "/DiveIntoDigital",
+    "memo": "OCAD University, Toronto",
+    "date": "2018 March",
+    "type": "VR App",
+    "tools": "Unity",
     "role": "Development",
-    "tags": "Software",
-    "mainPhoto": "pics/projects/VPIA/VPIA.jpg"
+    "tags": "MR Software",
+    "mainPhoto": "pics/projects/DiveIntoDigital/DiveIntoDigital.JPG"
   },
   {
     "key": 3,
@@ -193,26 +193,86 @@
   },
   {
     "key": 17,
-    "name": "DiveIntoDigital",
-    "link": "/DiveIntoDigital",
-    "memo": "OCAD University, Toronto",
-    "date": "2018 March",
-    "type": "VR App",
-    "tools": "Unity",
+    "name": "Virtual Platform For Indigenous Art",
+    "memo": "Wapatah Centre, Toronto",
+    "link": "/vpia",
+    "date": "2021",
+    "type": "Wiki Platform",
+    "tools": "ReactJS, Bootstrap, AWS",
     "role": "Development",
-    "tags": "MR Software",
-    "mainPhoto": "pics/projects/DiveIntoDigital/DiveIntoDigital.JPG"
+    "tags": "Software",
+    "mainPhoto": "pics/projects/VPIA/VPIA.jpg"
   },
   {
     "key": 18,
-    "name": "Universe Concert",
-    "link": "/UniverseConcert",
-    "memo": "Plymouth University, Plymouth",
-    "date": "2015",
-    "type": "AR Theater",
-    "tools": "Unity",
-    "role": "Design",
-    "tags": "MR",
-    "mainPhoto": "pics/projects/UniverseConcert/UniverseConcert.JPG"
+    "name": "RABBOT",
+    "memo": "Thesis project",
+    "link": "/rabbot",
+    "date": "2019",
+    "type": "VR/AR Apps",
+    "tools": "Unity, Blender3D",
+    "role": "Design & Development",
+    "tags": "MR Wearables Software",
+    "mainPhoto": "pics/projects/RABBOT/RABBOT.jpg"
+  },
+  {
+    "key": 19,
+    "name": "Shopify Blog Front-end Development",
+    "link": "/EM",
+    "memo": "Art & Science, Toronto",
+    "date": "2022",
+    "type": "Shopify Store",
+    "tools": "Shopify",
+    "role": "Development",
+    "tags": "Software",
+    "mainPhoto": "pics/projects/EM/EM.jpg"
+  },
+  {
+    "key": 20,
+    "name": "Shopify Marketplace Front-end Development",
+    "link": "/TR",
+    "memo": "Art & Science, Toronto",
+    "date": "2020",
+    "type": "Shopify Store",
+    "tools": "Shopify",
+    "role": "Development",
+    "tags": "Software",
+    "mainPhoto": "pics/projects/TR/TR.jpg"
+  },
+  {
+    "key": 21,
+    "name": "Headless Wordpress Front-end Development",
+    "link": "/E",
+    "memo": "Art & Science, Toronto",
+    "date": "2023",
+    "type": "Website",
+    "tools": "Shopify",
+    "role": "Development",
+    "tags": "Software",
+    "mainPhoto": "pics/projects/E/E.jpg"
+  },
+  {
+    "key": 22,
+    "name": "Apostrophe Front-end Development",
+    "link": "/N",
+    "memo": "Art & Science, Toronto",
+    "date": "2022",
+    "type": "Website",
+    "tools": "Apostrophe",
+    "role": "Development",
+    "tags": "Software",
+    "mainPhoto": "pics/projects/N/N.jpg"
+  },
+  {
+    "key": 23,
+    "name": "Wordpress Development",
+    "link": "/DG",
+    "memo": "Art & Science, Toronto",
+    "date": "2021",
+    "type": "Website",
+    "tools": "Wordpress",
+    "role": "Development",
+    "tags": "Software",
+    "mainPhoto": "pics/projects/DG/DG.jpg"
   }
 ]
