--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -298,5 +298,17 @@
     "role": "Development",
     "tags": "Software",
     "mainPhoto": "pics/projects/BS/BS_thumbnail.jpg"
+  },
+  {
+    "key": 26,
+    "name": "SaaS Fullstack Development",
+    "link": "/gitreposcope",
+    "memo": "Side Project",
+    "date": "2025",
+    "type": "Website",
+    "tools": "NextJS, Supabase, OpenAI",
+    "role": "Development",
+    "tags": "Software",
+    "mainPhoto": "pics/projects/GitRepoScope/thumbnail.png"
   }
 ]
