--- a/src/assets/projectsData.json
+++ b/src/assets/projectsData.json
@@ -301,12 +301,12 @@
   },
   {
     "key": 26,
-    "name": "SaaS Fullstack Development",
+    "name": "AI SaaS Fullstack Development",
     "link": "/gitreposcope",
-    "memo": "Side Project",
+    "memo": "Toronto",
     "date": "2025",
     "type": "Website",
-    "tools": "NextJS, Supabase, OpenAI",
+    "tools": "NextJS, Supabase, OpenAI, LangChain, Google OAuth,",
     "role": "Development",
     "tags": "Software",
     "mainPhoto": "pics/projects/GitRepoScope/thumbnail.png"
